Setup Identity in services container and initial migration

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings":{
-    "DefaultConnection": "server=localhost;Database=mingle_db; User Id=root;Password=p@$$w0rd1234;Allow User Variable=True"
+    "DefaultConnection": "server=localhost;Database=mingle_db; User Id=root;Password=P@$$w0rd1234;"
   }
 }
